--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "nesbot/carbon": "^2.43"
+        "nesbot/carbon": "^2.43",
+        "laravelcollective/html": "~6.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
