--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+
+
+        
+        "test" : [
+            "vendor/bin/phpunit"
         ]
+        
     }
 }
