--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "~6.0",
         "nesbot/carbon": "^2.43",
+        "php-defer/php-defer": "4.0",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
