--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravelcollective/html": "~6.0",
         "nesbot/carbon": "^2.43",
         "php-defer/php-defer": "4.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop",
+        "virtualorz/actionlog": "^0.0.9"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
